@@ -1,3 +1,9 @@
+2009-07
+- Add Help menu items pointing to Hatari docs & site
+- --timer-d support + doc updates
+2009-06
+- Move to BerliOS Hatari repo
+- Update to latest Hatari: midi in/out, sound freq etc
 2008-10
 - Support paths & peripherals settings
 2008-09
